--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
-    - assets/petfeed.jpg
+    - assets/petfeed.png
     - assets/conn.png
     - assets/mic.png
     - assets/setup.png
