--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   firebase_core: ^3.6.0
 
   firebase_auth: ^5.3.0
+  cloud_firestore: ^5.6.12
+  firebase_storage: ^12.3.0
+  cloud_functions: ^5.1.3
 
 dev_dependencies:
   flutter_test:
@@ -28,7 +31,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
-    - assets/petfeed.jpg
+    - assets/petfeed.png
     - assets/conn.png
     - assets/mic.png
     - assets/setup.png
