--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cloud_firestore: ^5.6.12
   firebase_storage: ^12.3.0
   cloud_functions: ^5.1.3
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
